--- a/index.html
+++ b/index.html
@@ -7,14 +7,24 @@
   </head>
   <body>
     <div id="app">
-    	<vue-flag-list></vue-flag-list>
+      {{ha}}
+    	<vue-pagination></vue-pagination>
+      1
     </div>
     <!-- built files will be auto injected -->
   </body>
-  <script src="./vue.js"></script>
-<script type="text/javascript" src="dist/vue-flag-list.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
+<script type="text/javascript" src="dist/vue-pagination.min.js"></script>
 <script type="text/javascript">
-  Vue.use(VueFlagList);
+  Vue.use(VuePagination);
+  new Vue({
+    id: '#idd',
+    data: {
+      return {
+        ha: 111
+      }
+    }
+  })
 </script>
 </html>
 
