--- a/index.html
+++ b/index.html
@@ -6,25 +6,7 @@
     <title>pagination</title>
   </head>
   <body>
-    <div id="app">
-      {{ha}}
-    	<vue-pagination></vue-pagination>
-      1
-    </div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-<script src="https://cdn.jsdelivr.net/npm/vue@2.5.13/dist/vue.js"></script>
-<script type="text/javascript" src="dist/vue-pagination.min.js"></script>
-<script type="text/javascript">
-  Vue.use(VuePagination);
-  new Vue({
-    id: '#idd',
-    data: {
-      return {
-        ha: 111
-      }
-    }
-  })
-</script>
 </html>
-
